--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -7,9 +7,14 @@
 body {
 	@extend .sans-serif;
 	font-weight: 500;
+	color: #141414;
+	background-color: #f5f5f5;
 }
 
 @import 'header';
+@import 'about';
+@import 'projs';
+@import 'footer';
 
 .wrapper { max-width: 800px; }
 
@@ -27,6 +32,18 @@ body {
 }
 .button-green {
 	border-color: #09ed70;
+	background-color: #09ed70;
+	color: #141414;
+	transition: all 300ms;
+
+	&:hover {
+		background-color: transparent;
+		color: #09916d;
+		border-color: #09916d;
+	}
+}
+.button-outline-green {
+	border-color: #09ed70;
 	background-color: transparent;
 	color: #09ed70;
 	transition: all 300ms;
@@ -35,4 +52,23 @@ body {
 		background-color: #09ed70;
 		color: #141414;
 	}
+}
+
+section { padding: 100px 0; }
+section .title {
+	@extend .serif;
+	font-weight: bold;
+	text-align: center;
+}
+
+.rounded-2 {
+	border-radius: 10px;
+}
+
+.text-green { color: #09916d; }
+
+a { transition: color 200ms; }
+a:hover {
+	text-decoration: none;
+	color: #0bba7a;
 }
