--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -11242,6 +11242,17 @@ footer {
   color: #FFF;
 }
 
+.button-outline-red {
+  border-color: #ff1424;
+  background-color: transparent;
+  color: #ff1424;
+  transition: all 300ms;
+}
+.button-outline-red:hover {
+  background-color: #ff1424;
+  color: #FFF;
+}
+
 section {
   padding: 100px 0;
 }
