--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -83,6 +83,17 @@ body {
 		color: #FFF;
 	}
 }
+.button-outline-red {
+	border-color: #ff1424;
+	background-color: transparent;
+	color: #ff1424;
+	transition: all 300ms;
+
+	&:hover {
+		background-color: #ff1424;
+		color: #FFF;
+	}
+}
 
 section { padding: 100px 0; }
 section .title {
