--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -7,8 +7,8 @@
 body {
 	@extend .sans-serif;
 	font-weight: 500;
-	color: #141414;
-	background-color: #f5f5f5;
+	color: #1b1b1b;
+	background-color: #fff;
 }
 
 @import 'header';
