--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -11061,7 +11061,8 @@ body {
 }
 
 header .navbar {
-  margin: 20px;
+  margin: 15px;
+  padding: 10px 20px;
   background-color: rgba(0, 0, 0, 0.93);
   border-radius: 23px;
 }
@@ -11104,6 +11105,23 @@ header .navbar-nav .nav-link:hover {
   color: white !important;
 }
 
+@media screen and (min-width: 425px) {
+  header .navbar {
+    padding: 15px 25px;
+  }
+  header .navbar .navbar-brand img {
+    height: 36px;
+  }
+  header .navbar .toggle-menu img {
+    width: 32px;
+  }
+}
+@media screen and (min-width: 768px) {
+  header .navbar {
+    margin: 20px;
+    padding: 15px 35px;
+  }
+}
 @media screen and (min-width: 992px) {
   header .navbar-nav {
     width: auto;
