--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,7 +1,8 @@
 header {
 	
 	.navbar {
-		margin: 20px;
+		margin: 15px;
+		padding: 10px 20px;
 		background-color: rgba(0, 0, 0, .93);
 		border-radius: 23px;
 	}
@@ -43,7 +44,29 @@ header {
 		}
 	}
 }
+@media screen and (min-width: 425px) {
+	header {
+		.navbar {
+			padding: 15px 25px;
 
+			.navbar-brand img {
+				height: 36px;
+			}
+
+			.toggle-menu img {
+				width: 32px;
+			}
+		}
+	}
+}
+@media screen and (min-width: 768px) {
+	header {
+		.navbar {
+			margin: 20px;
+			padding: 15px 35px;
+		}
+	}
+}
 @media screen and (min-width: 992px) {
 	header {
 		.navbar-nav {
