--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -11063,7 +11063,7 @@ body {
 header .navbar {
   margin: 15px;
   padding: 10px 20px;
-  background-color: rgba(0, 0, 0, 0.93);
+  background-color: #141414;
   border-radius: 23px;
 }
 header .navbar-nav {
@@ -11104,6 +11104,15 @@ header .navbar-nav .nav-link {
 header .navbar-nav .nav-link:hover {
   color: white !important;
 }
+header .header-title {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
+  background-image: url(acc844ce22a94a223926.svg);
+}
+header .header-title .h1 {
+  font-size: 1.8rem !important;
+}
 
 @media screen and (min-width: 425px) {
   header .navbar {
@@ -11134,6 +11143,12 @@ header .navbar-nav .nav-link:hover {
   }
   header .navbar-nav::before {
     display: none;
+  }
+  header .header-title {
+    background-image: none;
+  }
+  header .header-title .h1 {
+    font-size: 2.6rem !important;
   }
 }
 #about .text {
